Create new validation to control duplcate keys